# PaletteEditor

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Makefile  dev.txt  imgui.ini
include/: actions.hpp  context.hpp  editor.hpp  fs.hpp  palette.hpp  popups.hpp
include/actions/: change_color_count.hpp  modify_color.hpp  swap_colors.hpp
include/popups/: combine.hpp  error.hpp  logger.hpp  prompt.hpp  split.hpp
source/: actions.cpp  context.cpp  editor.cpp  fs.cpp  main.cpp  palette.cpp  popups.cpp
source/actions/: change_color_count.cpp  modify_color.cpp  swap_colors.cpp
source/popups/: combine.cpp  error.cpp  logger.cpp  prompt.cpp  split.cpp
src/: editor.cpp  editor.hpp  main.cpp  palette.cpp  palette.hpp
